# gitopscli

./: .coveragerc  .dockerignore  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .pylintrc  .releaserc.yml  .travis.yml  404.html  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.baloise  Makefile  README.md  ci.groovy  dependabot.yml  index.html  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  setup.py  sitemap.xml  test.sh
.github/: dependabot.yml
.github/workflows/: main.yml  release.yml  test.yml
changelog/: index.html
commands/add-pr-comment/: index.html
commands/create-pr-preview/: index.html
commands/create-preview/: index.html
commands/delete-pr-preview/: index.html
commands/delete-preview/: index.html
commands/deploy/: index.html
commands/sync-apps/: index.html
commands/version/: index.html
contributing/: index.html
doc/: CODEOWNERS
doc/commands/: add-pr-comment.md  create-preview.md  delete-preview.md  deploy.md  sync-apps.md
docs/: CODEOWNERS  changelog.md  getting-started.md  index.md  license.md  setup.md
docs/commands/: add-pr-comment.md  create-pr-preview.md  create-preview-common.md  create-preview.md  delete-pr-preview.md  delete-preview.md  deploy.md  sync-apps.md  version.md
docs/includes/: preview-configuration.md
getting-started/: index.html
gitopscli/: __main__.py  abstract_git_util.py  apps_sync.py  apps_synchronizer.py  bitbucket_git_util.py  cliparser.py  create_git.py  git_util.py  github_git_util.py  gitops_config.py  gitops_exception.py  yaml_util.py
gitopscli/appconfig_api/: app_tenant_config.py  root_repo.py  traverse_config.py
gitopscli/cli/: __init__.py  command_args.py
gitopscli/commands/: __init__.py  add_pr_comment.py  command.py  command_factory.py  create_pr_preview.py  create_preview.py  create_preview_common.py  delete_pr_preview.py  delete_preview.py  deploy.py  sync_apps.py  version.py
gitopscli/commands/base/: __init__.py  command_factory.py
gitopscli/commands/common/: __init__.py  gitops_config_loader.py
gitopscli/git/: __init__.py  abstract_git_util.py  bitbucket_git_repo_api_adapter.py  bitbucket_git_util.py  create_git.py  git_api_config.py  git_factory.py  git_provider.py  git_repo.py  git_repo_api.py  git_repo_api_factory.py  git_repo_api_logging_proxy.py  github_git_repo_api_adapter.py  github_git_util.py
gitopscli/git_api/: __init__.py  azure_devops_git_repo_api_adapter.py  bitbucket_cloud_git_repo_api_adapter.py  bitbucket_git_repo_api_adapter.py  git_api_config.py  git_provider.py  git_repo.py  git_repo_api.py  git_repo_api_factory.py  git_repo_api_logging_proxy.py  github_git_repo_api_adapter.py  gitlab_git_repo_api_adapter.py
gitopscli/io/: gitops_config.py  tmp_dir.py  yaml_util.py
gitopscli/io_api/: tmp_dir.py  yaml_util.py
gitopscli/yaml/: gitops_config.py  yaml_util.py
includes/preview-configuration/: index.html
license/: index.html
search/: search_index.json
setup/: index.html
tests/: test_cliparser.py  test_gitops_config.py  test_gitops_config_v0.py  test_gitops_config_v1.py  test_gitops_config_v2.py  test_yaml_util.py
tests/commands/: mock_mixin.py  test_add_pr_comment.py  test_command_factory.py  test_create_pr_preview.py  test_create_preview.py  test_delete_pr_preview.py  test_delete_preview.py  test_deploy.py  test_sync_apps.py  test_version.py
tests/commands/common/: test_gitops_config_loader.py
tests/git/: test_abstract_git_util.py  test_create_git.py  test_git_api_config.py  test_git_factory.py  test_git_repo.py  test_git_repo_api_logging_proxy.py  test_repo_api_factory.py
tests/git_api/: test_azure_devops_git_repo_api_adapter.py  test_git_repo.py  test_git_repo_api_logging_proxy.py  test_repo_api_factory.py
tests/io/: test_gitops_config.py  test_tmp_dir.py  test_yaml_util.py
tests/io_api/: test_tmp_dir.py  test_yaml_util.py
tests/yaml/: test_gitops_config.py  test_yaml_util.py
