[tool.poetry]
name = "gitopscli"
version = "0.0.0"
description = "GitOps CLI is a command line interface (CLI) to perform operations on GitOps managed infrastructure repositories, including updates in YAML files."
authors = ["Christian Siegel <christian.siegel@gmx.net>"]
readme = "README.md"
repository = "https://github.com/baloise/gitopscli"

[tool.poetry.scripts]
gitopscli = "gitopscli.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
gitpython = "*"
"ruamel.yaml" = "*"
jsonpath-ng = "*"
atlassian-python-api = "*"
pygithub = "*"
python-gitlab = "^2.6.0"

[tool.poetry.group.test.dependencies]
ruff = "*"
coverage = "*"
pytest = "*"
mypy = "*"
typeguard = "^2.13.3"
pre-commit = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
markdown-include = "*"
pymdown-extensions = "*"
Markdown = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101", # https://docs.astral.sh/ruff/rules/missing-type-self/
    "ANN401", # https://docs.astral.sh/ruff/rules/any-type/
    "C901", # https://docs.astral.sh/ruff/rules/complex-structure/
    "PLR0913", # https://docs.astral.sh/ruff/rules/too-many-arguments/
    "D", # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/ (clashes with formatter)
    "EM101", # https://docs.astral.sh/ruff/rules/raw-string-in-exception/
    "EM102", # https://docs.astral.sh/ruff/rules/f-string-in-exception/
    "S101", # https://docs.astral.sh/ruff/rules/assert/
    "TRY003", # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
    "PD", # https://docs.astral.sh/ruff/rules/#pandas-vet-pd (false positives)
]
[tool.ruff.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**/*.py" = [
    "S106", # https://docs.astral.sh/ruff/rules/hardcoded-password-func-arg/
    "S108", # https://docs.astral.sh/ruff/rules/hardcoded-temp-file/
    "ANN", # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "PT009" # https://docs.astral.sh/ruff/rules/pytest-unittest-assertion/
]
