[project]
name = "gitopscli"
version = "0.0.0"
description = "GitOps CLI is a command line interface (CLI) to perform operations on GitOps managed infrastructure repositories, including updates in YAML files."
authors = [{ name = "Christian Siegel", email = "christian.siegel@gmx.net" }]
requires-python = ">=3.10, <4"
readme = "README.md"
dependencies = [
    "gitpython",
    "ruamel.yaml",
    "jsonpath-ng",
    "atlassian-python-api>=3,<4",
    "pygithub",
    "python-gitlab>=2.6.0,<3",
    "azure-devops>=7,<8",
]

[project.urls]
Repository = "https://github.com/baloise/gitopscli"

[project.scripts]
gitopscli = "gitopscli.__main__:main"

[dependency-groups]
test = [
    "ruff",
    "pytest-cov",
    "mypy==1.6.1",
    "typeguard>=2.13.3,<3",
    "pre-commit",
    "types-requests",
    "types-Deprecated",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "markdown-include",
    "pymdown-extensions",
    "Markdown",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[virtualenvs]
in-project = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", # https://docs.astral.sh/ruff/rules/any-type/
    "C901", # https://docs.astral.sh/ruff/rules/complex-structure/
    "PLR0913", # https://docs.astral.sh/ruff/rules/too-many-arguments/
    "D", # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/ (clashes with formatter)
    "ISC001", # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/ (clashes with formatter)
    "EM101", # https://docs.astral.sh/ruff/rules/raw-string-in-exception/
    "EM102", # https://docs.astral.sh/ruff/rules/f-string-in-exception/
    "S101", # https://docs.astral.sh/ruff/rules/assert/
    "TRY003", # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
    "PD", # https://docs.astral.sh/ruff/rules/#pandas-vet-pd (false positives)
    "LOG015", # https://docs.astral.sh/ruff/rules/root-logger-call/
    "PTH208", # https://docs.astral.sh/ruff/rules/os-listdir/
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**/*.py" = [
    "S106", # https://docs.astral.sh/ruff/rules/hardcoded-password-func-arg/
    "S108", # https://docs.astral.sh/ruff/rules/hardcoded-temp-file/
    "ANN", # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "PT009", # https://docs.astral.sh/ruff/rules/pytest-unittest-assertion/
    "SLF001", # https://docs.astral.sh/ruff/rules/private-member-access/ (needed for testing private methods)
]
"gitopscli/git_api/azure_devops_git_repo_api_adapter.py" = [
    "TRY300", # https://docs.astral.sh/ruff/rules/try-consider-else/ (conflicts with RET505)
]
